manifest/set-max-map-count.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: max-map-count-setter
  labels:
    k8s-app: max-map-count-setter
spec:
  selector:
    matchLabels:
      name: max-map-count-setter
  template:
    metadata:
      labels:
        name: max-map-count-setter
    spec:
      containers:
        - name: sleep
          image: gcr.io/google-containers/pause-amd64:3.2
