manifest/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami

---

## apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: nginx
#  annotations:
#    ingress.kubernetes.io/ssl-redirect: "false"
#spec:
#  rules:
#  - host: domain.k3d
#    http:
#      paths:
#
#      - path: /whoami2
#        pathType: Prefix
#        backend:
#          service:
#            name: whoami
#            port:
#              number: 80
